Add color to states.

--- a/src/simple.conf
+++ b/src/simple.conf
@@ -3,3 +3,12 @@ set-option -g status-right ""
 
 set -g status-fg colour236
 set -g status-bg colour255
+set -g status-attr default
+
+set-window-option -g window-status-fg colour19
+set-window-option -g window-status-bg colour15
+set-window-option -g window-status-attr dim
+
+set-window-option -g window-status-current-fg colour166
+set-window-option -g window-status-current-bg colour0
+set-window-option -g window-status-current-attr bright
