Use proper colors.

--- a/src/simple.conf
+++ b/src/simple.conf
@@ -5,10 +5,5 @@ set -g status-fg colour236
 set -g status-bg colour255
 set -g status-attr default
 
-set-window-option -g window-status-fg colour19
-set-window-option -g window-status-bg colour15
-set-window-option -g window-status-attr dim
-
-set-window-option -g window-status-current-fg colour166
-set-window-option -g window-status-current-bg colour0
-set-window-option -g window-status-current-attr bright
+set -g window-status-format "#[fg=colour161] #I #[fg=colour160] #W "
+set -g window-status-current-format "#[fg=colour240] #I #[fg=colour239] #W "
