Explicitly define bg color.

--- a/src/simple.conf
+++ b/src/simple.conf
@@ -5,5 +5,5 @@ set -g status-fg colour236
 set -g status-bg colour255
 set -g status-attr default
 
-set -g window-status-format "#[fg=colour240]#F#I:#[fg=colour239]#W#F"
-set -g window-status-current-format "#[fg=colour161]#F#I:#[fg=colour160]#W#F"
+set -g window-status-format "#[fg=colour240]#[bg=colour255]#I:#[fg=colour239]#[bg=colour255]#W#F"
+set -g window-status-current-format "#[fg=colour161]#[bg=colour255]#I:#[fg=colour160][bg=colour255]#W#F"
