Remove coloring, because this is the simple theme.

--- a/src/simple.conf
+++ b/src/simple.conf
@@ -1,9 +1,7 @@
+set-option -g status-position top
+set-window-option -g status-position top
+
 set-option -g status-left ""
-set-option -g status-right ""
 
-set -g status-fg colour250
-set -g status-bg colour233
-set -g status-attr default
-
-set -g window-status-format "#[fg=colour250]#[bg=colour233]#I:#[fg=colour250]#[bg=colour233]#W#F"
-set -g window-status-current-format "#[fg=colour255]#[bg=colour233]#I:#[fg=colour255]#[bg=colour233]#W#F"
+set -g window-status-format "#I:#W#F"
+set -g window-status-current-format "#I:#W#F*"
