asterisk is not needed. doh.

--- a/src/simple.conf
+++ b/src/simple.conf
@@ -4,4 +4,4 @@ set-window-option -g status-position top
 set-option -g status-left ""
 
 set -g window-status-format "#I:#W#F"
-set -g window-status-current-format "#I:#W#F*"
+set -g window-status-current-format "#I:#W#F"
